--- a/general.html
+++ b/general.html
@@ -199,23 +199,7 @@
 											</li>
 										</ul>
 									</div>
-									<div class="side-panel-element mrb-30">
-										<h4 class="mrb-15">Pintarest</h4>
-										<ul class="pintarest-list">
-											<li><a href="#"><img class="img-full" src="images/side-panel/1.jpg"
-														alt=""></a></li>
-											<li><a href="#"><img class="img-full" src="images/side-panel/2.jpg"
-														alt=""></a></li>
-											<li><a href="#"><img class="img-full" src="images/side-panel/3.jpg"
-														alt=""></a></li>
-											<li><a href="#"><img class="img-full" src="images/side-panel/4.jpg"
-														alt=""></a></li>
-											<li><a href="#"><img class="img-full" src="images/side-panel/5.jpg"
-														alt=""></a></li>
-											<li><a href="#"><img class="img-full" src="images/side-panel/6.jpg"
-														alt=""></a></li>
-										</ul>
-									</div>
+									
 								</div>
 								<h4 class="mrb-15">Social List</h4>
 								<ul class="social-list">
@@ -268,10 +252,13 @@
 				<div class="col-xl-12">
 					<div class="breadcrumb-area">
 						<h2 class="page-title">Covers</h2>
-						<ul class="breadcrumbs-link">
-							<li><a href="index.html">Home</a></li>
-							<li>Covers</li>
-							<li class="active">General Insurance</li>
+						<ul class="sub-menu" style="border-top: 4px solid #FAB758;">
+							<li><a href="motorinsurance.html">Motor Insurance</a></li>
+							<li><a href="medicalandtravel.html">Medical Insurance</a></li>
+							<li><a href="medicalandtravel.html">Travel Insurance</a></li>
+							<li><a href="general.html">Domestic Package / Home Insurance</a></li>
+							<li><a href="general.html">Marine Insurance</a></li>
+							<li><a href="business.html">Business Insurance</a></li>
 						</ul>
 					</div>
 				</div>
