--- a/motorinsurance.html
+++ b/motorinsurance.html
@@ -199,23 +199,7 @@
 											</li>
 										</ul>
 									</div>
-									<div class="side-panel-element mrb-30">
-										<h4 class="mrb-15">Pintarest</h4>
-										<ul class="pintarest-list">
-											<li><a href="#"><img class="img-full" src="images/side-panel/1.jpg"
-														alt=""></a></li>
-											<li><a href="#"><img class="img-full" src="images/side-panel/2.jpg"
-														alt=""></a></li>
-											<li><a href="#"><img class="img-full" src="images/side-panel/3.jpg"
-														alt=""></a></li>
-											<li><a href="#"><img class="img-full" src="images/side-panel/4.jpg"
-														alt=""></a></li>
-											<li><a href="#"><img class="img-full" src="images/side-panel/5.jpg"
-														alt=""></a></li>
-											<li><a href="#"><img class="img-full" src="images/side-panel/6.jpg"
-														alt=""></a></li>
-										</ul>
-									</div>
+									
 								</div>
 								<h4 class="mrb-15">Social List</h4>
 								<ul class="social-list">
@@ -234,9 +218,12 @@
 										<li class="has-sub" style="border-bottom: 4px solid #FAB758;">
 											<a href="#">Covers &#8675;</a>
 											<ul class="sub-menu" style="border-top: 4px solid #FAB758;">
-												<li><a href="#" style="background: #013966; color: white;">Motor Insurance</a></li>
-												<li><a href="medicalandtravel.html">Medical & Travel</a></li>
-												<li><a href="general.html">General Insurance</a></li>
+												<li><a href="motorinsurance.html">Motor Insurance</a></li>
+												<li><a href="medicalandtravel.html">Medical Insurance</a></li>
+												<li><a href="medicalandtravel.html">Travel Insurance</a></li>
+												<li><a href="general.html">Domestic Package / Home Insurance</a></li>
+												<li><a href="general.html">Marine Insurance</a></li>
+												<li><a href="business.html">Business Insurance</a></li>
 											</ul>
 										</li>
 										<li>
