chore : add business domestic marine medical motor and travel pages

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                           style="border-top: 4px solid #fab758"
                         >
                           <li>
-                            <a href="motorinsurance.html">Motor Insurance</a>
+                            <a href="motor-insurance.html">Motor Insurance</a>
                           </li>
                           <li>
                             <a href="medicalandtravel.html"
@@ -295,16 +295,16 @@
                             >
                           </li>
                           <li>
-                            <a href="medicalandtravel.html">Travel Insurance</a>
+                            <a href="travel-insurance.html">Travel Insurance</a>
                           </li>
                           <li>
                             <a href="general.html"
                               >Domestic Package / Home Insurance</a
                             >
                           </li>
-                          <li><a href="general.html">Marine Insurance</a></li>
+                          <li><a href="marine-insurance.html">Marine Insurance</a></li>
                           <li>
-                            <a href="business.html">Business Insurance</a>
+                            <a href="business-insurance.html">Business Insurance</a>
                           </li>
                         </ul>
                       </li>
