--- a/motor-insurance.html
+++ b/motor-insurance.html
@@ -9,7 +9,7 @@
 	<meta name="description" content="Vmax Insurance">
 	<meta name="keywords"
 		content="insurance, agency, business, consulting, corporate, finance, digital, marketing, multipurpose" />
-		<title>Vmax Insurance || Contact</title>
+	<title>Vmax Insurance || Covers || Motor Insurance</title>
 	<link href="img/favecon.png" rel="shortcut icon" type="image/png">
 	<!-- Main Stylesheet -->
 	<link rel="stylesheet" href="css/watsappmenu.css">
@@ -215,7 +215,7 @@
 										<li class="has-sub">
 											<a href="/" class="hover">Home</a>
 										</li>
-										<li class="has-sub">
+										<li class="has-sub" style="border-bottom: 4px solid #FAB758;">
 											<a href="#">Covers &#8675;</a>
 											<ul class="sub-menu" style="border-top: 4px solid #FAB758;">
 												<li><a href="motor-insurance.html">Motor Insurance</a></li>
@@ -236,7 +236,7 @@
 											<a href="getquote.html" class="hover">Get Quote</a>
 										</li>
 										<li class="has-sub right-view">
-											<a href="#" style="border-bottom: 4px solid #FAB758;">Contact</a>
+											<a href="contact.html" class="hover">Contact</a>
 										</li>
 									</ul>
 								</nav>
@@ -254,10 +254,11 @@
 			<div class="row">
 				<div class="col-xl-12">
 					<div class="breadcrumb-area">
-						<h2 class="page-title">Contact</h2>
+						<h2 class="page-title">Covers</h2>
 						<ul class="breadcrumbs-link">
 							<li><a href="index.html">Home</a></li>
-							<li class="active">Contact</li>
+							<li>Covers</li>
+							<li class="active">Motor</li>
 						</ul>
 					</div>
 				</div>
@@ -265,96 +266,78 @@
 		</div>
 	</section>
 	<!-- Page Title End -->
-	<!-- Contact Section Start -->
-	<section class="contact-section pdt-110 pdb-70" data-background="images/bg/abs-bg3.png">
-		<div class="container">
-			<div class="row">
-				<div class="col-xl-4 col-lg-12">
-					<div class="contact-block d-flex mrb-30">
-						<div class="contact-icon">
-							<i class="webex-icon-map1"></i>
-						</div>
-						<div class="contact-details mrl-30">
-							<h5 class="icon-box-title mrb-5">Our Address</h5>
-							<p class="mrb-0">Nssf Building Nkurumah Road 4th Floor</p>
+	<!-- Services Section Start -->
+	<section class="features-section bg-silver pdt-110 pdb-80" data-background="images/bg/abs-bg8.png">
+		<div class="section-title text-center wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
+			<div class="container">
+				<div class="row">
+					<div class="col"></div>
+					<div class="col-lg-8 col-xl-6">
+						<div class="title-box-center">
+							<h5 class="sub-title sub-title-primary-color text-primary-color mrb-15">Services</h5>
+							<h2>We Provide professional Insurance Services</h2>
 						</div>
 					</div>
-					<div class="contact-block d-flex mrb-30">
-						<div class="contact-icon">
-							<i class="webex-icon-Phone2"></i>
-						</div>
-						<div class="contact-details mrl-30">
-							<h5 class="icon-box-title mrb-5">Phone Number</h5>
-							<p class="mrb-0"><a class="text-body-font-color" href="tel:0705226770">+254 705 226 770</a></p>
-						</div>
-					</div>
-					<div class="contact-block d-flex mrb-30">
-						<div class="contact-icon">
-							<i class="webex-icon-envelope"></i>
-						</div>
-						<div class="contact-details mrl-30">
-							<h5 class="icon-box-title mrb-5">Email Us</h5>
-							<p class="mrb-0"><a class="text-body-font-color" href="mailto:example@gmail.com">info@vmax.co.ke</a></p>
-						</div>
-					</div>
+					<div class="col"></div>
 				</div>
-				<!-- <div class="col-xl-3 col-lg-6">
-					<img class="mrb-45" src="images/about/contact-page-img1.jpg" alt="">
-				</div> -->
-				<div class="col-xl-8">
-					<div class="contact-form">
-						<form method="post" action="php/send-mail.php">
-							<div class="row">
-								<div class="col-lg-6">
-									<div class="form-group mrb-25">
-										<input type="text" name="name" placeholder="Name" class="form-control" required>
-									</div>
+			</div>
+		</div>
+		<div class="section-content">
+			<div class="container">
+				<div class="row">
+					<!-- <div class="col-xl-4 col-lg-4 col-md-6">
+						<div class="services-boxes">
+							<div class="services-inner">
+								<div class="services-shape">
+									<img src="images/objects/6.png" alt="">
 								</div>
-								<div class="col-lg-6">
-									<div class="form-group mrb-25">
-										<input type="text" name="phone" placeholder="Phone" class="form-control" required>
-									</div>
-								</div>
-								<div class="col-lg-12">
-									<div class="form-group mrb-25">
-										<input type="email" name="email" placeholder="Email" class="form-control" required>
-									</div>
-								</div>
-								<div class="col-lg-12">
-									<div class="form-group mrb-25">
-										<textarea rows="4" name="message" placeholder="Messages" class="form-control" required></textarea>
-									</div>
-								</div>
-								<div class="col-lg-8">
-									<div class="form-group">
-										<button type="submit" name="submit" class="cs-btn-one btn-md btn-round btn-primary-color element-shadow btn-colorr" value="Send">Send</button>
-									</div>
+								<div class="services-count"></div> -->
+								<!-- <i class="services-icon webexflaticon flaticon-delivery-truck-1"></i> -->
+								<!-- <h4 class="services-title"><a href="getquote.html">Motor Insurance</a></h4>
+								<p class="services-description">Protect your vehicle with comprehensive coverage for accidents, damage, and liability.</p>
+								<div class="services-link">
+									<a class="text-btn" href="getquote.html">Get Quote</a>
 								</div>
 							</div>
-						</form>
+						</div>
+					</div> -->
+					<div class="col-xl-4 col-lg-4 col-md-6">
+						<div class="services-boxes">
+							<div class="services-inner">
+								<div class="services-shape">
+									<img src="images/objects/6.png" alt="">
+								</div>
+								<div class="services-count"></div>
+								<!-- <i class="services-icon webexflaticon flaticon-delivery-truck-1"></i> -->
+								<h4 class="services-title"><a href="getquote.html">Comprehensive Insurance</a></h4>
+								<p class="services-description">Protect your vehicle with comprehensive coverage for accidents, damage, and liability.</p>
+								<div class="services-link">
+									<a class="text-btn" href="getquote.html">Get Quote</a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-xl-4 col-lg-4 col-md-6">
+						<div class="services-boxes">
+							<div class="services-inner">
+								<div class="services-shape">
+									<img src="images/objects/6.png" alt="">
+								</div>
+								<div class="services-count"></div>
+								<!-- <i class="services-icon webexflaticon flaticon-delivery-truck-1"></i> -->
+								<h4 class="services-title"><a href="getquote.html">Third Party Insurance</a></h4>
+								<p class="services-description">Protect your vehicle with comprehensive coverage for accidents, damage, and liability.</p>
+								<div class="services-link">
+									<a class="text-btn" href="getquote.html">Get Quote</a>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-	<!-- Contact Section End -->
-	<!-- Google Map Section Start -->
-	<div class="contact-section">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-lg-12 p-0">
-					<!-- Google Map Start -->
-					<div class="mapouter fixed-height">
-						<div class="gmap_canvas">
-							<iframe id="gmap_canvas" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15919.266864914687!2d39.6573128474185!3d-4.057762884655075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1840131f4ebfa0a3%3A0x18db2945baffb56!2sVMAX%20INSURANCE%20AGENCIES%20LTD!5e0!3m2!1sen!2ske!4v1691494226301!5m2!1sen!2ske"></iframe>
-						</div>
-					</div>
-					<!-- Google Map End -->
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- Google Map Section End -->
+	<!-- Services Section End -->
 	<!-- Footer Area Start -->
 	<footer class="footer anim-object2">
 		<div class="footer-main-area bg-cover pdb-lg-60" data-background="images/footer-bg.png">
