--- a/report.html
+++ b/report.html
@@ -213,17 +213,17 @@
 								<nav id="mobile-menu-right">
 									<ul>
 										<li class="has-sub">
-											<a href="index.html" class="hover">Home</a>
+											<a href="/" class="hover">Home</a>
 										</li>
 										<li class="has-sub">
 											<a href="#">Covers &#8675;</a>
 											<ul class="sub-menu" style="border-top: 4px solid #FAB758;">
-												<li><a href="motorinsurance.html">Motor Insurance</a></li>
-												<li><a href="medicalandtravel.html">Medical Insurance</a></li>
-												<li><a href="medicalandtravel.html">Travel Insurance</a></li>
-												<li><a href="general.html">Domestic Package / Home Insurance</a></li>
-												<li><a href="general.html">Marine Insurance</a></li>
-												<li><a href="business.html">Business Insurance</a></li>
+												<li><a href="motor-insurance.html">Motor Insurance</a></li>
+												<li><a href="medical-insurance.html">Medical Insurance</a></li>
+												<li><a href="travel-insurance.html">Travel Insurance</a></li>
+												<li><a href="domestic-insurance.html">Domestic Package / Home Insurance</a></li>
+												<li><a href="marine-insurance.html">Marine Insurance</a></li>
+												<li><a href="business-insurance.html">Business Insurance</a></li>
 											</ul>
 										</li>
 										<li>
