--- a/domestic-insurance.html
+++ b/domestic-insurance.html
@@ -9,7 +9,7 @@
 	<meta name="description" content="Vmax Insurance">
 	<meta name="keywords"
 		content="insurance, agency, business, consulting, corporate, finance, digital, marketing, multipurpose" />
-	<title>Vmax Insurance || Covers || Business Insurence</title>
+	<title>Vmax Insurance || Covers || Domestic</title>
 	<link href="img/favecon.png" rel="shortcut icon" type="image/png">
 	<!-- Main Stylesheet -->
 	<link rel="stylesheet" href="css/watsappmenu.css">
@@ -213,17 +213,17 @@
 								<nav id="mobile-menu-right">
 									<ul>
 										<li class="has-sub">
-											<a href="index.html" class="hover">Home</a>
+											<a href="/" class="hover">Home</a>
 										</li>
 										<li class="has-sub" style="border-bottom: 4px solid #FAB758;">
 											<a href="#">Covers &#8675;</a>
 											<ul class="sub-menu" style="border-top: 4px solid #FAB758;">
-												<li><a href="motorinsurance.html">Motor Insurance</a></li>
-												<li><a href="medicalandtravel.html">Medical Insurance</a></li>
-												<li><a href="medicalandtravel.html">Travel Insurance</a></li>
-												<li><a href="general.html">Domestic Package / Home Insurance</a></li>
-												<li><a href="general.html">Marine Insurance</a></li>
-												<li><a href="business.html">Business Insurance</a></li>
+												<li><a href="motor-insurance.html">Motor Insurance</a></li>
+												<li><a href="medical-insurance.html">Medical Insurance</a></li>
+												<li><a href="travel-insurance.html">Travel Insurance</a></li>
+												<li><a href="domestic-insurance.html">Domestic Package / Home Insurance</a></li>
+												<li><a href="marine-insurance.html">Marine Insurance</a></li>
+												<li><a href="business-insurance.html">Business Insurance</a></li>
 											</ul>
 										</li>
 										<li>
@@ -258,7 +258,7 @@
 						<ul class="breadcrumbs-link">
 							<li><a href="index.html">Home</a></li>
 							<li>Covers</li>
-							<li class="active">Mediacal & Travel</li>
+							<li class="active">Domestic</li>
 						</ul>
 					</div>
 				</div>
@@ -293,158 +293,15 @@
 								</div>
 								<div class="services-count"></div>
 								<!-- <i class="services-icon webexflaticon flaticon-networking"></i> -->
-								<h4 class="services-title"><a href="getquote.html">Fire Insurance</a></h4>
-								<p class="services-description">Ensure your well-being with medical coverage for treatments, prescriptions, and emergencies.</p>
+								<h4 class="services-title"><a href="getquote.html">Domestic Insurance</a></h4>
+								<p class="services-description">Lorem ipsum litora praesent Multrices venenatis mattis aliquam lobortis consequat vehicula, donec ligula nulla metus pharetra donec. Ipsum metus inceptos gravida in dictum at lobortis urna, aliquam at tellus vel cubilia etiam aliquet nostra sed, ac lacinia justo per lacus scelerisque fames.</p>
 								<div class="services-link">
 									<a class="text-btn" href="getquote.html">Get Quote</a>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="col-xl-3 col-lg-3 col-md-6">
-						<div class="services-boxes">
-							<div class="services-inner">
-								<div class="services-shape">
-									<img src="images/objects/6.png" alt="">
-								</div>
-								<div class="services-count"></div>
-								<!-- <i class="services-icon webexflaticon flaticon-rocket"></i> -->
-								<h4 class="services-title"><a href="getquote.html">Burglary insurance</a></h4>
-								<p class="services-description"> Enjoy worry-free journeys with coverage for trip cancellations, medical emergencies, and more.</p>
-								<div class="services-link">
-									<a class="text-btn" href="getquote.html">Get Quote</a>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-xl-3 col-lg-3 col-md-6">
-						<div class="services-boxes">
-							<div class="services-inner">
-								<div class="services-shape">
-									<img src="images/objects/6.png" alt="">
-								</div>
-								<div class="services-count"></div>
-								<!-- <i class="services-icon webexflaticon flaticon-like-1"></i> -->
-								<h4 class="services-title"><a href="getquote.html">Wiba / Employer Liability Insurance</a></h4>
-								<p class="services-description">Provide financial security for your loved ones with a reliable life protection plan.</p>
-								<div class="services-link">
-									<a class="text-btn" href="getquote.html">Get Quote</a>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-xl-3 col-lg-3 col-md-6">
-						<div class="services-boxes">
-							<div class="services-inner">
-								<div class="services-shape">
-									<img src="images/objects/6.png" alt="">
-								</div>
-								<div class="services-count"></div>
-								<!-- <i class="services-icon webexflaticon flaticon-like-1"></i> -->
-								<h4 class="services-title"><a href="getquote.html">Fidelity Guardnter Insurance</a></h4>
-								<p class="services-description"> Provides compensation for injuries, disability, and death from accidents.</p>
-								<div class="services-link">
-									<a class="text-btn" href="getquote.html">Get Quote</a>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-xl-3 col-lg-3 col-md-6">
-						<div class="services-boxes">
-							<div class="services-inner">
-								<div class="services-shape">
-									<img src="images/objects/6.png" alt="">
-								</div>
-								<div class="services-count"></div>
-								<!-- <i class="services-icon webexflaticon flaticon-like-1"></i> -->
-								<h4 class="services-title"><a href="getquote.html">Public Liability Insurance</a></h4>
-								<p class="services-description"> Provides compensation for injuries, disability, and death from accidents.</p>
-								<div class="services-link">
-									<a class="text-btn" href="getquote.html">Get Quote</a>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-xl-3 col-lg-3 col-md-6">
-						<div class="services-boxes">
-							<div class="services-inner">
-								<div class="services-shape">
-									<img src="images/objects/6.png" alt="">
-								</div>
-								<div class="services-count"></div>
-								<!-- <i class="services-icon webexflaticon flaticon-like-1"></i> -->
-								<h4 class="services-title"><a href="getquote.html">Machinery Breakdown Insurance</a></h4>
-								<p class="services-description"> Provides compensation for injuries, disability, and death from accidents.</p>
-								<div class="services-link">
-									<a class="text-btn" href="getquote.html">Get Quote</a>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-xl-3 col-lg-3 col-md-6">
-						<div class="services-boxes">
-							<div class="services-inner">
-								<div class="services-shape">
-									<img src="images/objects/6.png" alt="">
-								</div>
-								<div class="services-count"></div>
-								<!-- <i class="services-icon webexflaticon flaticon-like-1"></i> -->
-								<h4 class="services-title"><a href="getquote.html">Contractors All Risk Insurance</a></h4>
-								<p class="services-description"> Provides compensation for injuries, disability, and death from accidents.</p>
-								<div class="services-link">
-									<a class="text-btn" href="getquote.html">Get Quote</a>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-xl-3 col-lg-3 col-md-6">
-						<div class="services-boxes">
-							<div class="services-inner">
-								<div class="services-shape">
-									<img src="images/objects/6.png" alt="">
-								</div>
-								<div class="services-count"></div>
-								<!-- <i class="services-icon webexflaticon flaticon-like-1"></i> -->
-								<h4 class="services-title"><a href="getquote.html">Bonds Insurance</a></h4>
-								<p class="services-description"> Provides compensation for injuries, disability, and death from accidents.</p>
-								<div class="services-link">
-									<a class="text-btn" href="getquote.html">Get Quote</a>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-xl-3 col-lg-3 col-md-6">
-						<div class="services-boxes">
-							<div class="services-inner">
-								<div class="services-shape">
-									<img src="images/objects/6.png" alt="">
-								</div>
-								<div class="services-count"></div>
-								<!-- <i class="services-icon webexflaticon flaticon-like-1"></i> -->
-								<h4 class="services-title"><a href="getquote.html">All Risk Policy Insurance</a></h4>
-								<p class="services-description"> Provides compensation for injuries, disability, and death from accidents.</p>
-								<div class="services-link">
-									<a class="text-btn" href="getquote.html">Get Quote</a>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-xl-3 col-lg-3 col-md-6">
-						<div class="services-boxes">
-							<div class="services-inner">
-								<div class="services-shape">
-									<img src="images/objects/6.png" alt="">
-								</div>
-								<div class="services-count"></div>
-								<!-- <i class="services-icon webexflaticon flaticon-like-1"></i> -->
-								<h4 class="services-title"><a href="getquote.html">Electronic Equipment Insurance</a></h4>
-								<p class="services-description"> Provides compensation for injuries, disability, and death from accidents.</p>
-								<div class="services-link">
-									<a class="text-btn" href="getquote.html">Get Quote</a>
-								</div>
-							</div>
-						</div>
-					</div>
+					
 				</div>
 			</div>
 		</div>
