--- a/contact.html
+++ b/contact.html
@@ -303,35 +303,82 @@
 				</div> -->
 				<div class="col-xl-8">
 					<div class="contact-form">
-						<form method="post" action="php/send-mail.php">
+						<form action="https://api.web3forms.com/submit" method="POST">
+							<input
+							  type="hidden"
+							  name="subject"
+							  value="VMAX Contact Form"
+							/>
+			
+							<input
+							  type="hidden"
+							  name="redirect"
+							  value="https://web3forms.com/success"
+							/>
+							<input
+							  type="hidden"
+							  name="access_key"
+							  value="6872871e-b06c-4600-85f9-166b7183e377"
+							/>
 							<div class="row">
-								<div class="col-lg-6">
-									<div class="form-group mrb-25">
-										<input type="text" name="name" placeholder="Name" class="form-control" required>
-									</div>
+							  <div class="col-lg-6">
+								<div class="form-group mrb-25">
+								  <input
+									type="text"
+									name="name"
+									placeholder="Name"
+									class="form-control"
+									required
+								  />
 								</div>
-								<div class="col-lg-6">
-									<div class="form-group mrb-25">
-										<input type="text" name="phone" placeholder="Phone" class="form-control" required>
-									</div>
+							  </div>
+							  <div class="col-lg-6">
+								<div class="form-group mrb-25">
+								  <input
+									type="text"
+									name="phone"
+									placeholder="Phone"
+									class="form-control"
+									required
+								  />
 								</div>
-								<div class="col-lg-12">
-									<div class="form-group mrb-25">
-										<input type="email" name="email" placeholder="Email" class="form-control" required>
-									</div>
+							  </div>
+							  <div class="col-lg-12">
+								<div class="form-group mrb-25">
+								  <input
+									type="email"
+									name="email"
+									placeholder="Email"
+									class="form-control"
+									required
+								  />
 								</div>
-								<div class="col-lg-12">
-									<div class="form-group mrb-25">
-										<textarea rows="4" name="message" placeholder="Messages" class="form-control" required></textarea>
-									</div>
+							  </div>
+							  <div class="col-lg-12">
+								<div class="form-group mrb-25">
+								  <textarea
+									rows="4"
+									name="message"
+									placeholder="Messages"
+									class="form-control"
+									required
+								  ></textarea>
 								</div>
-								<div class="col-lg-8">
-									<div class="form-group">
-										<button type="submit" name="submit" class="cs-btn-one btn-md btn-round btn-primary-color element-shadow btn-colorr" value="Send">Send</button>
-									</div>
+							  </div>
+							  <div class="col-lg-8">
+								<div class="form-group">
+								  <button
+									type="submit"
+									name="submit"
+									class="cs-btn-one btn-md btn-round btn-primary-color element-shadow btn-colorr"
+									value="Send"
+								  >
+									Send
+								  </button>
 								</div>
+							  </div>
 							</div>
-						</form>
+						  </form>
 					</div>
 				</div>
 			</div>
