--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="css/animate.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/responsive.css" />
-    <!-- Using CDN -->
+    <!-- Using ng CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.3/angular.min.js"></script>
     <script src="/ng/ng-main.js"></script>
   </head>
