--- a/contact.html
+++ b/contact.html
@@ -303,7 +303,8 @@
 				</div> -->
 				<div class="col-xl-8">
 					<div class="contact-form">
-						<form action="https://api.web3forms.com/submit" method="POST">
+						<!-- <form action="https://api.web3forms.com/submit" method="POST"> -->
+							<form action="/contact_form.php" method="POST">
 							<input
 							  type="hidden"
 							  name="subject"
