--- a/report.html
+++ b/report.html
@@ -302,7 +302,8 @@
 					<div class="request-a-call-back-form mrb-md-60">
 						<!-- <h2 class="mrt-0 mrb-25 solid-bottom-line">Get a Quote</h2>
 						<p class="mrb-30">Distinctively exploit optimal alignments for intuitive coordinate business applications technologies</p> -->
-						<form action="https://api.web3forms.com/submit" method="POST">
+						<!-- <form action="https://api.web3forms.com/submit" method="POST"> -->
+					<form action="./report_form.php" method="POST">
 							<input type="hidden" name="access_key" value="6872871e-b06c-4600-85f9-166b7183e377">
 						<div class="row form-input">
 							<div class="col-lg-12">
@@ -506,7 +507,7 @@
 				`;
 		
 				// Set the form's action to mailto, and populate the body with the emailBody
-			   form.action = `mailto:mweroabdalla@gmail.com?subject=Insurance Claim&body=${encodeURIComponent(emailBody)}`;
+			//    form.action = `mailto:mweroabdalla@gmail.com?subject=Insurance Claim&body=${encodeURIComponent(emailBody)}`;
 		
 				// Submit the form
 			   form.submit();
