--- a/add-packages2.html
+++ b/add-packages2.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <form class="max-w-[1000px] w-[99%] mx-auto mt-16" id="form">
+      <input name="id" type="hidden" id="id">
       <div class="mb-4">
         <label class="block text-gray-700 text-sm font-bold mb-2" for="company">
           Select Company
@@ -205,7 +206,7 @@
             try {
               const response = await fetch(
                 `https://vmaxapi.fonfixrepairs.co.ke/insurances.php${
-                  id ? "id?=" + id : ""
+                  id ? "?id=" + id : ""
                 }`,
                 {
                   body: JSON.stringify(postData),
@@ -277,23 +278,20 @@
             package: formData.get("package") ?? "",
             downloadLink: formData.get("downloadLink") ?? "",
           };
+          if(formData.get("id")){
+            formPostData['id'] = formData.get("id")
+          }
 
           // Perform form submission logic here
           handlePost(formPostData);
-          //  console.log("Form Data:",{ formData, formPostData});
-
-          // Clear form after submission
-          // document.getElementById("company").value = "";
-          // document.getElementById("category").value = "";
-          // document.getElementById("subCategory").value = "";
-          // document.getElementById("package").value = "";
-          // document.getElementById("downloadLink").value = "";
+          
           e.target.reset();
         }
 
         function editItem(item) {
           // Populate form fields with the selected item for editing
           document.getElementById("company").value = item.company;
+          document.getElementById("id").value = item.id;
           document.getElementById("category").value = item.category;
           document.getElementById("package").value = item.package;
 
@@ -304,7 +302,7 @@
             subCategoryBox.classList.remove("hidden");
             updateSubCategories();
           }
-          document.getElementById("subCategory").value = item.subCategory;
+          document.getElementById("subCategory").value = item.subCategory.trim();
           document.getElementById("downloadLink").value = item.downloadLink;
         }
 
