fix : bug-fix in forms pages

--- a/api.vmax.co.ke/index copy.html
+++ b/api.vmax.co.ke/index copy.html
@@ -155,12 +155,15 @@
 `;
 
         const companies = [
-          "apa",
-          "geminia",
+          "britam",
+          "cic",
           "ga",
-          "intra",
-          "kenindia",
-          "mayfair",
+          "fidelity",
+          "jubilee",
+          "oldmutual",
+          "star",
+          "prudential",
+          "directline",
         ];
         const categories = [
           "motor",
