--- a/report.html
+++ b/report.html
@@ -193,7 +193,7 @@
 											<li><span class="fas fa-envelope mrr-10 text-primary-color"></span><a
 													href="mailto:info@vmax.co.ke">info@vmax.co.ke</a></li>
 											<li><span class="fas fa-phone-alt mrr-10 text-primary-color"></span>
-												<a href="tel:0705226770">+254 705 226 770</a> <br>/
+												
 												<a href="tel:0720329069">+254 720 329 069</a> /
 												<a href="tel:0735329069">+254 735 329 069</a>
 											</li>
@@ -321,8 +321,8 @@
 										<input type="text" placeholder="Loss Estimate (KSh.)" id="estimated-loss"  name="estimated-loss" required>
 									</div>
 									<div class="name-inp" style="width: 100%;">
-										<select name="clam-type" id="claim-type" class="select-input-1 select-2">
-											<option value="">Type of claim</option>
+										<select name="insurance-cover" id="insurance-cover" class="select-input-1 select-2">
+											<option value="">Select Cover</option>
 											<option value="marine cover">MARINE COVER</option>
 											<option value="domestic package">DOMESTIC PACKAGE</option>
 											<option value="industrial risks">INDUSTRIAL ALL RISKS</option>
@@ -429,7 +429,7 @@
 									<div class="contact-info-text">
 										<h5 class="text-white">Phone</h5>
 										<p class="mrb-0">
-											<a class="text-light-gray" href="tel:0705226770">+254 705 226 770</a><br>
+											
 											<a class="text-light-gray" href="tel:0720329069">+254 720 329 069</a><br>
 											<a class="text-light-gray" href="tel:0735329069">+254 735 329 069</a>
 										</p>
@@ -491,7 +491,7 @@
 				var email = document.getElementById('email').value;
 				var date = document.getElementById('date').value;
 				var estimatedLoss = document.getElementById('estimated-loss').value;
-				var claimType = document.getElementById('claim-type').value;
+				var claimType = document.getElementById('insurance-cover').value;
 				var description = document.getElementById('description').value;
 		
 				// Create email body
