--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                           <span
                             class="fas fa-phone-alt mrr-10 text-primary-color"
                           ></span>
-                          <a href="tel:0705226770">+254 705 226 770</a> <br />/
+
                           <a href="tel:0720329069">+254 720 329 069</a> /
                           <a href="tel:0735329069">+254 735 329 069</a>
                         </li>
@@ -302,9 +302,13 @@
                               >Domestic Package / Home Insurance</a
                             >
                           </li>
-                          <li><a href="marine-insurance.html">Marine Insurance</a></li>
                           <li>
-                            <a href="business-insurance.html">Business Insurance</a>
+                            <a href="marine-insurance.html">Marine Insurance</a>
+                          </li>
+                          <li>
+                            <a href="business-insurance.html"
+                              >Business Insurance</a
+                            >
                           </li>
                         </ul>
                       </li>
@@ -867,9 +871,7 @@
                     <div class="contact-info-text">
                       <h5 class="text-white">Phone</h5>
                       <p class="mrb-0">
-                        <a class="text-light-gray" href="tel:0705226770"
-                          >+254 705 226 770</a
-                        ><br />
+                       
                         <a class="text-light-gray" href="tel:0720329069"
                           >+254 720 329 069</a
                         ><br />
