chore : replace dummy text with actula content in packages

--- a/marine-insurance.html
+++ b/marine-insurance.html
@@ -294,7 +294,7 @@
 								<div class="services-count"></div>
 								<!-- <i class="services-icon webexflaticon flaticon-networking"></i> -->
 								<h4 class="services-title"><a href="getquote.html">Marine Insurance</a></h4>
-								<p class="services-description">Lorem ipsum litora praesent accumsan litora placerat tempor ac enim viverra </p>
+								<p class="services-description">Safeguard your goods during transit by sea with marine insurance, covering risks such as damage, loss, or theft of cargo.</p>
 								<div class="services-link">
 									<a class="text-btn" href="getquote.html">Get Quote</a>
 								</div>
