--- a/domestic-insurance.html
+++ b/domestic-insurance.html
@@ -294,7 +294,7 @@
 								<div class="services-count"></div>
 								<!-- <i class="services-icon webexflaticon flaticon-networking"></i> -->
 								<h4 class="services-title"><a href="getquote.html">Domestic Insurance</a></h4>
-								<p class="services-description">Lorem ipsum litora praesent Multrices venenatis mattis aliquam lobortis consequat vehicula, donec ligula nulla metus pharetra donec. Ipsum metus inceptos gravida in dictum at lobortis urna, aliquam at tellus vel cubilia etiam aliquet nostra sed, ac lacinia justo per lacus scelerisque fames.</p>
+								<p class="services-description">Protect your home and belongings with coverage against various risks, providing financial security in case of unexpected events.</p>
 								<div class="services-link">
 									<a class="text-btn" href="getquote.html">Get Quote</a>
 								</div>
